--- a/finalmusic/index.html
+++ b/finalmusic/index.html
@@ -18,16 +18,17 @@
       <div id="controls" class="box vertical">Controls
 		<div id="controlsFrame">
 			<br><br>
-			<div><audio id="player" controls src="songs/Elton John - Mona Lisas And Mad Hatters.mp3"></audio></div>
+			<div><audio id="player" controls src="songs/Hollywood Undead - Gravity.mp3"></audio></div>
 			<div>
 				<select id="choices">
 					<option>Select A Song</option>
-					<option>Do You Mind</option>
-					<option>Mona Lisas</option>
-					<option>Faithfully</option>					
+					<option>Gravity</option>
+					<option>I Hate Everything About You</option>
+					<option>Breaking The Habit</option>		
+					
 				</select>
 			</div>
-			<div id="songTitle">Elton John - Mona Lisas</div>			
+			<div id="songTitle">Hollywood Undead - Gravity</div>			
 		</div><!-- END of ControlsFrame-->  
 	  </div><!-- END of Controls-->
       <div id="picture" class="box vertical">Picture</div>
